Changelog for plone.app.form

    (name of developer listed in brackets)

plone.app.form - 1.1.1

    - Synchronized the default value behavior of all fields in the datetime
      widget. This closes https://dev.plone.org/plone/ticket/6988.
      [hannosch]

plone.app.form - 1.1.0 Released April 20th, 2008

    - Changed the patch warning to debug level. This is nothing the end users
      have to see.
      [hannosch]

plone.app.form - 1.1.0a1

    - Improve KSS inline validation for complex widgets like the 
      UberSelectionwidget that require more than a single form value to
      validate.
      [optilude]

    - PLIP202: add support for KSS validation and inline editing for formlib
      forms
      [optilude]

plone.app.form - 1.0.5

    - Fix widget error rendering in template (added structure keyword).
      [ldr]

plone.app.form - 1.0.4 Released December 6th, 2007

    - Omit first label tag completely instead of having an empty one for
      checkboxes.
      [fschulze]

    - Added id to wrapping div of the field for easy access for styles and
      javascripts, the form is 'field-$fieldname'.
      [fschulze]

plone.app.form - 1.0.3 Released

    - Changed template to render info messages as infos and error messages as
      errors, instead of all messages (info and error both) as errors.
      [derek_richardson]

    - Protect against funky aq_chains.
      [hannosch, rafrombrc]

plone.app.form - 1.0.2 Released

    - Fixed fall back to language name in LanguageDropdownChoiceWidget.
      [hannosch]

    - Added i18n markup to the formlib base templates, so the required message
      will be translated the same way as in the rest of Plone. This closes
      http://dev.plone.org/plone/ticket/7063.
      [hannosch]

plone.app.form - 1.0.1 Released

    - Add a form validator that only validates an action when updating a
      form. This makes it possible to add actions manually in the template